fix: IDE warnings and avoid discouraged field injection